--- a/WindowsFirewallOutboundNotifier/WindowsFirewallOutboundNotifier.csproj
+++ b/WindowsFirewallOutboundNotifier/WindowsFirewallOutboundNotifier.csproj
@@ -28,4 +28,11 @@
     <PackageReference Include="System.Diagnostics.EventLog" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\shield.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+
 </Project>
