--- a/WindowsFirewallOutboundNotifier/WindowsFirewallOutboundNotifier.csproj
+++ b/WindowsFirewallOutboundNotifier/WindowsFirewallOutboundNotifier.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>Windows Firewall Outbound Notifier</AssemblyName>
     <ApplicationIcon>shield.ico</ApplicationIcon>
